v0.0.1/modules/schema/pages/class/PackageDependenciesCIMVersion.adoc
= `PackageDependenciesCIMVersion`
:toclevels: 4


+++The version of dependencies description among top level subpackages of the combined CIM model.  This is not the same as the combined packages version.+++


[cols="h,3",width=65%]
|===
| Type
| Class

| URI
| `cim:PackageDependenciesCIMVersion`




|===

== Class hierarchy
* *`PackageDependenciesCIMVersion`*


== Slots




[cols="3,1,3,6",width=100%]
|===
| Name | Cardinality | Type | Description

| <<date,`date`>>
| 0..1
| https://w3id.org/linkml/Date[`date`]
| +++Date of last change to the main package dependencies in format YYYY-MM-DD.   This is updated when the version attribute is updated.+++

| <<version,`version`>>
| 0..1
| https://w3id.org/linkml/String[`string`]
| +++The version of the main subpackages of the combined CIM model.  The format is simply an integer.  The version (and date) initial values should be updated any time the dependencies in the model change and require an actual change to the diagrams within this package.+++
|===

'''


//[discrete]
[#date]
=== `date`
+++Date of last change to the main package dependencies in format YYYY-MM-DD.   This is updated when the version attribute is updated.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:PackageDependenciesCIMVersion.date`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Date[`date`]


|===

//[discrete]
[#version]
=== `version`
+++The version of the main subpackages of the combined CIM model.  The format is simply an integer.  The version (and date) initial values should be updated any time the dependencies in the model change and require an actual change to the diagrams within this package.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:PackageDependenciesCIMVersion.version`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]


|===


