v1.1.0/modules/schema/pages/class/PackageDependenciesCIMVersion.adoc
= `PackageDependenciesCIMVersion`
:toclevels: 4


+++The version of dependencies description among top level subpackages of the combined CIM model.  This is not the same as the combined packages version.+++


[cols="h,3",width=65%]
|===
| Type
| Class

| URI
| `cim:PackageDependenciesCIMVersion`




|===

== Class hierarchy
* *`PackageDependenciesCIMVersion`*


== Slots




[cols="1,1,2,1",width=100%]
|===
| Name | Type | Description | Inherited from

| <<date,`date`>>
//| [[slots_table.date]]<<date,`date`>>
| 0..1 +
https://w3id.org/linkml/Date[`date`]
| +++Date of last change to the main package dependencies in format YYYY-MM-DD.   This is updated when the version attribute is updated.+++
| _n/a_

| <<version,`version`>>
//| [[slots_table.version]]<<version,`version`>>
| 0..1 +
https://w3id.org/linkml/String[`string`]
| +++The version of the main subpackages of the combined CIM model.  The format is simply an integer.  The version (and date)...+++
| _n/a_
|===

'''


//[discrete]
[#date]
=== `date`
+++Date of last change to the main package dependencies in format YYYY-MM-DD.   This is updated when the version attribute is updated.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:PackageDependenciesCIMVersion.date`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Date[`date`]


|===

////
[.text-left]
--
<<slots_table.date,&#10548;>>
--
////


//[discrete]
[#version]
=== `version`
+++The version of the main subpackages of the combined CIM model.  The format is simply an integer.  The version (and date) initial values should be updated any time the dependencies in the model change and require an actual change to the diagrams within this package.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:PackageDependenciesCIMVersion.version`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]


|===

////
[.text-left]
--
<<slots_table.version,&#10548;>>
--
////





== Used by


This class is not used by any other classes as the range of a slot.
